Fixed link issues and final adjustment on spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,10 +5,15 @@
     box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
     background-color: #FFF;
+
 }
 
 /*----------------Nav bar Styles ---------------*/
